Recebendo os valores das propriedades do config-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# Este nome deve ser igual ao nome do "limits-service".properties no repositorio local do git no qual o server config busca as configurações
+spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
 
-limits-service.minimum=3
-limits-service.maximum=9
+#limits-service.minimum=3
+#limits-service.maximum=9
