Adicionando configuração para buscar propriedades de um determinado ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,10 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
 
+spring.profiles.active=dev
+
+# Os arquivos procurados no repo local são terminados com "*-dev.properties"
+spring.cloud.config.profile=dev
+
 #limits-service.minimum=3
 #limits-service.maximum=9
